--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
-  <title>FitCenter App</title>
+  <title>FitCenter</title>
   <base href="/">
   <meta
     name="viewport"
@@ -29,7 +29,7 @@
   >
   <meta
     property="og:description"
-    content="Tu app de entrenamiento y bienestar. Organiza tus clases y sigue tu progreso."
+    content="Fit Center Valencia unofficial App to manage users, classes and agenda."
   >
   <meta
     property="og:image"
